logs/Slang/generated/hdlconv/hdlconvertor_p774.sv.log
name: hdlconvertor_p774
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p774.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p774.sv:11:13: error: hierarchical names are not allowed in constant expressions
sub s1 (ebus.mp);
        ~~~~^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p774.sv:13:12: error: unknown interface 'interface'
module sub(interface.mp i);
           ^~~~~~~~~
